--- a/style/main.css
+++ b/style/main.css
@@ -58,20 +58,24 @@ body {
 }
 
 .rateslider { 
-display: inline-block;
-width: 200px;
+display: flex;
+width: 100%;
+text-align: start;
 }
 
 #parameter {
 float : left;
 padding: 10px;
-width: 30%; 
+width: 25%;
+font-family: "Franklin Gothic Medium","Franklin Gothic","ITC Franklin Gothic",Arial,sans-serif;
+font-size: 18px;
 }
 
 #slider {
-float :right;
-padding: 10px;
-width: 30%; 
+float: right;
+padding: 0px;
+width: 70%; 
+
 
 }
 
@@ -117,7 +121,7 @@ width: 30%;
 #progressbar {
 	margin-bottom: 30px;
 	overflow: hidden;
-	height: 50px !important;
+	height: 50px;
 	min-height: 50px;
 	/*CSS counters to number the steps*/
 	counter-reset: step;
