--- a/style/main.css
+++ b/style/main.css
@@ -208,3 +208,20 @@ width: 70%;
 	padding-right:18px;
 	text-decoration: none;
 }
+
+
+footer{
+	display:block;
+	position: absolute;
+	bottom:0;
+	/*margin: 0 auto;*/
+	text-align: center;
+	width:100%;
+	color:white;
+	margin-bottom: 2px;
+}
+
+
+footer a {
+	color:white;
+}
