--- a/style/main.css
+++ b/style/main.css
@@ -11,7 +11,7 @@ html {
 	/*background = gradient + image pattern combo*/
 	background: 
 		linear-gradient(rgba(196, 102, 0, 0.2), rgba(155, 89, 182, 0.2)), 
-		url('https://download.unsplash.com/photo-1429030150151-548690082f0b');
+		url('../images/bg.jpg');
 		background-size: 1500px 1500px;
 		background-position: 50% 50%
 }
